--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="all">
-        <!-- <div class="number"  id="number1"> -->
+        <div class="number"  id="number1">
             <input type="button" value="Вопрос:1">
             <p class="question"> Что такое закон сохранения энергии?</p>
             <input type="text" class="answer" id="answer1" placeholder="ОТВЕТ">
@@ -77,7 +77,7 @@
 </div>
 <div><input type="button" value="ПРОВЕРИТЬ" id="check"></div>
 <div id="result">Счет:0</div>
-<button id="clean">Очистить данние таблици</button>
+<button id="Сlean">Очистить данние таблици</button>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/84739494738993/proba/x.js"></script>
 </body>
