--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 <div><input type="button" value="ПРОВЕРИТЬ" id="check"></div>
 <div id="result">Счет:0</div>
-<button id="Сlean">Очистить данние таблици</button>
+<button id="сlean">Очистить данние таблици</button>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/84739494738993/proba/x.js"></script>
 </body>
